--- a/css/style.css
+++ b/css/style.css
@@ -8,22 +8,28 @@
 .center{
     display: flex;
     flex-wrap: wrap;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 2%;
+    max-width:1200px;
+    margin:0 auto;
+    padding:0 2%;
+}
+
+html,body{
+    height:100%;
+    overflow: hidden;
 }
 
 header{
-    padding: 20px 0;
+    height:200px;
+    padding:20px 0;
 }
 
 .logo{
-    width: 50%;
+    width:50%;
 }
 
 .menu{
-    padding-top: 30px;
-    width: 50%;
+    padding-top:30px;
+    width:50%;
     text-align: right;
 }
 
@@ -31,5 +37,21 @@ header{
     color: black;
     text-decoration: none;
     font-weight: bold;
+    margin-right:15px;
 
+}
+
+section.sobre{
+    height: calc(100% - 200px);
+    position: relative;
+}
+
+.extras {
+    position: absolute;
+    bottom:-450px;
+    right:-500px;
+    width:1200px;
+    height:1200px;
+    border-radius:50%;
+    background-color: #91BECC;
 }
